--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -129,7 +129,6 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::2;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
-allow 2600:3c07::f03c:94ff:fe12:513e;
 allow 2602:2e6:0:6::;
 allow 2602:fc24:11:26c3::1;
 allow 2602:fc24:11:66c4::1;
@@ -237,46 +236,6 @@ allow 2607:5300:205:200::4894;
 allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
 allow 2607:f530:8002::19;
-allow 2620:18c:0:192::130;
-allow 2620:18c:0:192::131;
-allow 2620:18c:0:192::132;
-allow 2620:18c:0:192::133;
-allow 2620:18c:0:192::134;
-allow 2620:18c:0:192::135;
-allow 2620:18c:0:192::136;
-allow 2620:18c:0:192::137;
-allow 2620:18c:0:192::138;
-allow 2620:18c:0:192::139;
-allow 2620:18c:0:192::140;
-allow 2620:18c:0:192::141;
-allow 2620:18c:0:192::142;
-allow 2620:18c:0:192::143;
-allow 2620:18c:0:192::144;
-allow 2620:18c:0:192::145;
-allow 2620:18c:0:192::146;
-allow 2620:18c:0:192::147;
-allow 2620:18c:0:192::148;
-allow 2620:18c:0:192::149;
-allow 2620:18c:0:192::210;
-allow 2620:18c:0:192::211;
-allow 2620:18c:0:192::212;
-allow 2620:18c:0:192::213;
-allow 2620:18c:0:192::214;
-allow 2620:18c:0:192::215;
-allow 2620:18c:0:192::216;
-allow 2620:18c:0:192::217;
-allow 2620:18c:0:192::218;
-allow 2620:18c:0:192::219;
-allow 2620:18c:0:192::220;
-allow 2620:18c:0:192::221;
-allow 2620:18c:0:192::222;
-allow 2620:18c:0:192::223;
-allow 2620:18c:0:192::224;
-allow 2620:18c:0:192::225;
-allow 2620:18c:0:192::226;
-allow 2620:18c:0:192::227;
-allow 2620:18c:0:192::228;
-allow 2620:18c:0:192::229;
 allow 2620:59:a000:9666:216:3eff:fe7d:dae8;
 allow 2620:7:6001::101;
 allow 2620:7:6001::102;
@@ -526,7 +485,6 @@ allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
-allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
@@ -538,6 +496,7 @@ allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a0a:3840:8078:23:0:504e:17e2:1337;
+allow 2a0a:3840:8078:23:0:504e:17f1:1337;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
