--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -129,7 +129,6 @@ set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c03:e000:fa::2;
 set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
-set_real_ip_from 2600:3c07::f03c:94ff:fe12:513e;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:fc24:11:26c3::1;
 set_real_ip_from 2602:fc24:11:66c4::1;
@@ -237,46 +236,6 @@ set_real_ip_from 2607:5300:205:200::4894;
 set_real_ip_from 2607:5300:61:785::;
 set_real_ip_from 2607:5300:61:785:1:2:3:4;
 set_real_ip_from 2607:f530:8002::19;
-set_real_ip_from 2620:18c:0:192::130;
-set_real_ip_from 2620:18c:0:192::131;
-set_real_ip_from 2620:18c:0:192::132;
-set_real_ip_from 2620:18c:0:192::133;
-set_real_ip_from 2620:18c:0:192::134;
-set_real_ip_from 2620:18c:0:192::135;
-set_real_ip_from 2620:18c:0:192::136;
-set_real_ip_from 2620:18c:0:192::137;
-set_real_ip_from 2620:18c:0:192::138;
-set_real_ip_from 2620:18c:0:192::139;
-set_real_ip_from 2620:18c:0:192::140;
-set_real_ip_from 2620:18c:0:192::141;
-set_real_ip_from 2620:18c:0:192::142;
-set_real_ip_from 2620:18c:0:192::143;
-set_real_ip_from 2620:18c:0:192::144;
-set_real_ip_from 2620:18c:0:192::145;
-set_real_ip_from 2620:18c:0:192::146;
-set_real_ip_from 2620:18c:0:192::147;
-set_real_ip_from 2620:18c:0:192::148;
-set_real_ip_from 2620:18c:0:192::149;
-set_real_ip_from 2620:18c:0:192::210;
-set_real_ip_from 2620:18c:0:192::211;
-set_real_ip_from 2620:18c:0:192::212;
-set_real_ip_from 2620:18c:0:192::213;
-set_real_ip_from 2620:18c:0:192::214;
-set_real_ip_from 2620:18c:0:192::215;
-set_real_ip_from 2620:18c:0:192::216;
-set_real_ip_from 2620:18c:0:192::217;
-set_real_ip_from 2620:18c:0:192::218;
-set_real_ip_from 2620:18c:0:192::219;
-set_real_ip_from 2620:18c:0:192::220;
-set_real_ip_from 2620:18c:0:192::221;
-set_real_ip_from 2620:18c:0:192::222;
-set_real_ip_from 2620:18c:0:192::223;
-set_real_ip_from 2620:18c:0:192::224;
-set_real_ip_from 2620:18c:0:192::225;
-set_real_ip_from 2620:18c:0:192::226;
-set_real_ip_from 2620:18c:0:192::227;
-set_real_ip_from 2620:18c:0:192::228;
-set_real_ip_from 2620:18c:0:192::229;
 set_real_ip_from 2620:59:a000:9666:216:3eff:fe7d:dae8;
 set_real_ip_from 2620:7:6001::101;
 set_real_ip_from 2620:7:6001::102;
@@ -526,7 +485,6 @@ set_real_ip_from 2a06:1700:0:15::2;
 set_real_ip_from 2a06:1700:0:15::3;
 set_real_ip_from 2a06:1700:0:15::4;
 set_real_ip_from 2a06:1700:0:16::1;
-set_real_ip_from 2a06:1700:0:16b::11;
 set_real_ip_from 2a06:1700:0:3c::1;
 set_real_ip_from 2a06:1700:0:50::11;
 set_real_ip_from 2a06:1700:3:19::1;
@@ -538,6 +496,7 @@ set_real_ip_from 2a06:e80:3000:1:bad:babe:ca11:911;
 set_real_ip_from 2a07:e01:2:13::2;
 set_real_ip_from 2a07:e03:2a::bcde;
 set_real_ip_from 2a0a:3840:8078:23:0:504e:17e2:1337;
+set_real_ip_from 2a0a:3840:8078:23:0:504e:17f1:1337;
 set_real_ip_from 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 set_real_ip_from 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 set_real_ip_from 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
