--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,6 +6,7 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -15,6 +16,7 @@ allow 103.253.24.18;
 allow 103.28.52.93;
 allow 104.167.242.116;
 allow 104.167.242.117;
+allow 104.167.242.118;
 allow 104.192.1.138;
 allow 104.192.171.138;
 allow 104.192.3.74;
@@ -154,13 +156,13 @@ allow 162.247.74.202;
 allow 162.247.74.204;
 allow 162.247.74.206;
 allow 162.247.74.213;
+allow 162.247.74.216;
 allow 162.247.74.217;
 allow 162.247.74.27;
 allow 162.247.74.7;
 allow 162.247.74.74;
 allow 162.251.5.152;
 allow 163.172.213.212;
-allow 163.172.45.102;
 allow 163.5.143.76;
 allow 164.132.172.209;
 allow 165.73.242.163;
@@ -256,6 +258,7 @@ allow 185.130.47.58;
 allow 185.141.147.128;
 allow 185.142.239.49;
 allow 185.146.232.234;
+allow 185.146.232.243;
 allow 185.14.97.37;
 allow 185.153.197.227;
 allow 185.154.110.142;
@@ -496,6 +499,7 @@ allow 185.241.208.206;
 allow 185.241.208.232;
 allow 185.241.208.236;
 allow 185.241.208.243;
+allow 185.241.208.54;
 allow 185.241.208.71;
 allow 185.243.218.110;
 allow 185.243.218.202;
@@ -600,7 +604,6 @@ allow 192.42.116.22;
 allow 192.42.116.220;
 allow 192.42.116.221;
 allow 192.42.116.23;
-allow 192.42.116.24;
 allow 192.42.116.25;
 allow 192.42.116.26;
 allow 192.42.116.27;
@@ -665,7 +668,6 @@ allow 198.96.155.3;
 allow 198.98.48.192;
 allow 198.98.48.20;
 allow 198.98.48.33;
-allow 198.98.49.203;
 allow 198.98.50.199;
 allow 198.98.51.189;
 allow 198.98.51.249;
@@ -785,6 +787,7 @@ allow 2001:1b60:3:239:1003:106:0:1;
 allow 2001:40e8:0:f090::100;
 allow 2001:41d0:1008:20d1::1;
 allow 2001:41d0:2:9161::1;
+allow 2001:41d0:304:200::9dce;
 allow 2001:41d0:401:3200::3efd;
 allow 2001:41d0:404:300::dd2;
 allow 2001:41d0:601:1100::108e;
@@ -874,7 +877,6 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5519;
 allow 2001:67c:6ec:203:218:33ff:fe44:5520;
 allow 2001:67c:6ec:203:218:33ff:fe44:5522;
 allow 2001:67c:6ec:203:218:33ff:fe44:5523;
-allow 2001:67c:6ec:203:218:33ff:fe44:5524;
 allow 2001:67c:6ec:203:218:33ff:fe44:5525;
 allow 2001:67c:6ec:203:218:33ff:fe44:5526;
 allow 2001:67c:6ec:203:218:33ff:fe44:5527;
@@ -997,9 +999,9 @@ allow 2.58.56.220;
 allow 2.58.56.248;
 allow 2.58.56.43;
 allow 2.58.56.90;
-allow 2600:3c00:e000:4ee::1;
+allow 2600:3c00:e000:4ee::2;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
-allow 2600:3c03:e000:fa::2;
+allow 2600:3c03:e000:fa::3;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2602:2e6:0:6::;
@@ -1014,6 +1016,7 @@ allow 2602:fc24:12:a679::1;
 allow 2602:fc24:19:95b7::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
+allow 2602:fccf:310:1::c;
 allow 2602:fef9:100:1100::199;
 allow 2603:3:6106:2460::;
 allow 2603:3:6107:47a0::;
@@ -1038,7 +1041,6 @@ allow 2605:6400:10:8a2:de49:ffd1:46f5:99a2;
 allow 2605:6400:10:984:41e7:4ad6:a11e:cdcc;
 allow 2605:6400:10:aa1:2db8:1c14:2191:4aa8;
 allow 2605:6400:10:c39:3b1c:a9d9:fb78:d7f1;
-allow 2605:6400:10:fa4:9e93:1da8:f7af:2e65;
 allow 2605:6400:20:104e::2;
 allow 2605:6400:20:170c::1;
 allow 2605:6400:20:1c01:7d33:a5db:c2b9:1092;
@@ -1359,6 +1361,7 @@ allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
+allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
@@ -1370,7 +1373,6 @@ allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a0a:3840:8078:23:0:504e:17e2:1337;
-allow 2a0a:3840:8078:23:0:504e:17f1:1337;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
@@ -1698,7 +1700,7 @@ allow 45.95.169.255;
 allow 46.166.139.111;
 allow 46.182.21.248;
 allow 46.182.21.250;
-allow 46.195.91.44;
+allow 46.195.97.211;
 allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1730,7 +1732,6 @@ allow 51.91.18.151;
 allow 5.196.73.12;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.2.72.52;
 allow 5.255.100.126;
 allow 5.255.100.219;
 allow 5.255.100.26;
@@ -1757,6 +1758,7 @@ allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.79.179;
 allow 5.2.79.190;
+allow 54.205.80.179;
 allow 54.224.79.94;
 allow 5.42.66.6;
 allow 5.42.80.232;
@@ -1799,7 +1801,6 @@ allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
 allow 80.78.23.226;
-allow 80.78.23.241;
 allow 80.82.78.14;
 allow 81.16.33.42;
 allow 81.17.28.95;
