--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -129,6 +129,7 @@ set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c03:e000:fa::3;
 set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:fc24:11:26c3::1;
 set_real_ip_from 2602:fc24:11:66c4::1;
@@ -168,7 +169,6 @@ set_real_ip_from 2605:6400:10:aa1:2db8:1c14:2191:4aa8;
 set_real_ip_from 2605:6400:10:c39:3b1c:a9d9:fb78:d7f1;
 set_real_ip_from 2605:6400:20:104e::2;
 set_real_ip_from 2605:6400:20:170c::1;
-set_real_ip_from 2605:6400:20:1c01:7d33:a5db:c2b9:1092;
 set_real_ip_from 2605:6400:20:2417::69;
 set_real_ip_from 2605:6400:20:3ea:c2a3:1162:7224:e5df;
 set_real_ip_from 2605:6400:20:482:3920:1829:1839:1293;
