--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,7 +5,6 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -29,7 +28,6 @@ allow 104.244.73.193;
 allow 104.244.73.43;
 allow 104.244.74.23;
 allow 104.244.74.97;
-allow 104.244.75.74;
 allow 104.244.77.192;
 allow 104.244.77.208;
 allow 104.244.78.162;
@@ -105,7 +103,6 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
-allow 118.163.74.160;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
@@ -144,6 +141,7 @@ allow 152.89.233.169;
 allow 154.16.116.61;
 allow 155.4.102.252;
 allow 160.119.249.240;
+allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
@@ -176,6 +174,7 @@ allow 171.25.193.80;
 allow 172.104.182.84;
 allow 172.104.214.41;
 allow 172.232.161.205;
+allow 172.233.16.74;
 allow 172.81.131.139;
 allow 173.232.195.137;
 allow 173.232.195.144;
@@ -877,7 +876,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:9b1:c300:3044::610;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
@@ -968,7 +966,6 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
-allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.94.211.25;
 allow 23.94.36.142;
@@ -990,7 +987,7 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::3;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
-allow 2602:2e5::104;
+allow 2600:3c0d::f03c:94ff:fe42:512f;
 allow 2602:2e6:0:6::;
 allow 2602:fc24:11:26c3::1;
 allow 2602:fc24:11:66c4::1;
@@ -1327,6 +1324,7 @@ allow 2a05:b0c7:67b0::1;
 allow 2a05:b0c7:67bb::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6841::1;
+allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:696c::1;
 allow 2a05:b0c7:6978::1;
 allow 2a05:b0c7:6b6c::1;
@@ -1579,6 +1577,7 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
+allow 3.234.150.80;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 37.1.201.144;
@@ -1592,7 +1591,6 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
 allow 38.97.116.244;
-allow 44.221.22.51;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.130.20.250;
@@ -1797,6 +1795,7 @@ allow 84.38.134.224;
 allow 84.38.134.225;
 allow 84.38.134.226;
 allow 84.38.134.227;
+allow 84.54.51.61;
 allow 84.54.51.68;
 allow 84.54.51.69;
 allow 85.17.9.83;
