--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -35,7 +35,6 @@ deny 2001:678:e3c::a;
 deny 2001:678:e3c::b;
 deny 2001:678:e3c::c;
 deny 2001:678:e3c::d;
-deny 2001:67c:2044:1905::26;
 deny 2001:67c:2608::1;
 deny 2001:67c:289c::20;
 deny 2001:67c:289c:2::234;
@@ -484,6 +483,7 @@ deny 2a06:1700:0:15::2;
 deny 2a06:1700:0:15::3;
 deny 2a06:1700:0:15::4;
 deny 2a06:1700:0:16::1;
+deny 2a06:1700:0:16b::11;
 deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:50::11;
 deny 2a06:1700:3:19::1;
