--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -5,7 +5,6 @@ set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
-set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -256,6 +255,7 @@ set_real_ip_from 185.130.47.58;
 set_real_ip_from 185.141.147.128;
 set_real_ip_from 185.142.239.49;
 set_real_ip_from 185.146.232.234;
+set_real_ip_from 185.146.232.243;
 set_real_ip_from 185.14.97.37;
 set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
@@ -813,7 +813,6 @@ set_real_ip_from 2001:678:e3c::a;
 set_real_ip_from 2001:678:e3c::b;
 set_real_ip_from 2001:678:e3c::c;
 set_real_ip_from 2001:678:e3c::d;
-set_real_ip_from 2001:67c:2044:1905::26;
 set_real_ip_from 2001:67c:2608::1;
 set_real_ip_from 2001:67c:289c::20;
 set_real_ip_from 2001:67c:289c:2::234;
@@ -1363,6 +1362,7 @@ set_real_ip_from 2a06:1700:0:15::2;
 set_real_ip_from 2a06:1700:0:15::3;
 set_real_ip_from 2a06:1700:0:15::4;
 set_real_ip_from 2a06:1700:0:16::1;
+set_real_ip_from 2a06:1700:0:16b::11;
 set_real_ip_from 2a06:1700:0:3c::1;
 set_real_ip_from 2a06:1700:0:50::11;
 set_real_ip_from 2a06:1700:3:19::1;
@@ -1613,6 +1613,7 @@ set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
 set_real_ip_from 31.42.185.134;
+set_real_ip_from 34.193.211.128;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 35.240.241.135;
 set_real_ip_from 37.1.201.144;
@@ -1701,7 +1702,7 @@ set_real_ip_from 45.95.169.255;
 set_real_ip_from 46.166.139.111;
 set_real_ip_from 46.182.21.248;
 set_real_ip_from 46.182.21.250;
-set_real_ip_from 46.195.207.226;
+set_real_ip_from 46.195.74.82;
 set_real_ip_from 46.226.164.14;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
@@ -1769,7 +1770,6 @@ set_real_ip_from 54.36.108.162;
 set_real_ip_from 5.45.102.93;
 set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
-set_real_ip_from 54.87.246.76;
 set_real_ip_from 5.79.66.19;
 set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.171.137.169;
@@ -1873,7 +1873,6 @@ set_real_ip_from 91.132.144.59;
 set_real_ip_from 91.139.160.150;
 set_real_ip_from 91.203.144.194;
 set_real_ip_from 91.203.145.116;
-set_real_ip_from 91.206.26.26;
 set_real_ip_from 91.208.197.144;
 set_real_ip_from 91.208.75.153;
 set_real_ip_from 91.208.75.156;
